--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,3 +17,11 @@ jobs:
 
     - name: Make
       run: PATH="$HOME/bin:$PATH" make -j2
+
+    - name: Upload
+      uses: actions/upload-artifact@v2
+      with:
+        name: results
+        path: |
+          **/*.midi
+          **/*.pdf
